--- a/Project/src/views/ResumeList.hbs
+++ b/Project/src/views/ResumeList.hbs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Список пользователей</title>
+    <title>Resumes</title>
     <meta charset="utf-8" />
 </head>
 <body>
-<h1>Список пользователей</h1>
+<a href="/employer/my_page">Back to profile</a>
 <table>
-    <tr><th>Name</th><th>Age</th><th></th></tr>
+
     {{#each resumes}}
         <tr>
             <td>{{this.position}}</td>
             <td>{{this.salary}}</td>
             <td>{{this.cv}}</td>
             <td>
-                <a href="/add_Contract/{{this.id}}]">Propose contract</a>
+                <form action="add_contract/{{this.resume_id}}" method="POST">
+                    <input type="submit" value="Propose contract" />
                 </form>
             </td>
         </tr>
