--- a/Project/src/views/addResume.hbs
+++ b/Project/src/views/addResume.hbs
@@ -1,9 +1,9 @@
 <form method="POST">
-<label>Имя</label><br>
+<label>Position</label><br>
 <input name="position" class="field"/><br><br>
-<label>Имя</label><br>
+<label>CV</label><br>
 <input name="cv" class="field"/><br><br>
-<label>Имя</label><br>
+<label>Salary</label><br>
 <input name="salary" type="number" class="field"/><br><br>
 <input type="submit" value="Create" />
 </form>
