--- a/Project/src/views/editContract.hbs
+++ b/Project/src/views/editContract.hbs
@@ -1,9 +1,7 @@
 <form method="POST">
-    <label>Должность</label><br>
+    <label>Position</label><br>
     <input name="position" value="{{contract.position}}" class="field"/><br><br>
-    <label>Имя</label><br>
-    <textarea name="cv" class="field">{{contract.cv}}</textarea><br><br>
-    <label>Оклад</label><br>
+    <label>Salary</label><br>
     <input name="salary" type="number" value="{{contract.salary}}" class="field"/><br><br>
     <input type="submit" value="Edit"/>
 </form>
