--- a/Project/src/views/login.hbs
+++ b/Project/src/views/login.hbs
@@ -6,10 +6,11 @@
     <style>.field{width:180px;}</style>
 </head>
 <body>
+<a href="/register">Sign up</a>
 <form method="POST">
-    <label>Имя</label><br>
+    <label>Login</label><br>
     <input name="login" class="field"/><br><br>
-    <label>Имя</label><br>
+    <label>Password</label><br>
     <input name="password" class="field"/><br><br>
     <input type="submit" value="Отправить" />
 </form>
