--- a/Project/src/views/ResumeList.hbs
+++ b/Project/src/views/ResumeList.hbs
@@ -3,23 +3,51 @@
 <head>
     <title>Resumes</title>
     <meta charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<style>
+    table {
+        counter-reset: section;
+    }
+    .table{
+        margin-left: 10%;
+        width: 1000px;
+    }
+    .count:before {
+        counter-increment: section;
+        content: counter(section);
+    }
+</style>
 <body>
-<a href="/employer/my_page">Back to profile</a>
-<table>
+<a style="margin-left: 5%" href="/employer/my_page">Back to profile</a>
 
-    {{#each resumes}}
+<div class="row justify-content-center">
+    <table class="table">
+        <thead class="thead-light">
         <tr>
-            <td>{{this.position}}</td>
-            <td>{{this.salary}}</td>
-            <td>{{this.cv}}</td>
-            <td>
-                <form action="add_contract/{{this.resume_id}}" method="POST">
-                    <input type="submit" value="Propose contract" />
-                </form>
-            </td>
+            <th scope="col">#</th>
+            <th scope="col">Position</th>
+            <th scope="col">Salary</th>
+            <th scope="col">CV</th>
+            <th scope="col">Button</th>
         </tr>
-    {{/each}}
-</table>
+        </thead>
+        <tbody>
+        {{#each resumes}}
+            <tr>
+                <td class="count"></td>
+                <td>{{this.position}}</td>
+                <td>{{this.salary}}</td>
+                <td>{{this.cv}}</td>
+                <td>
+                    <form action="add_contract/{{this.resume_id}}" method="POST" style="display:inline;">
+                        <input type="submit" value="Propose contract" />
+                    </form>
+                </td>
+            </tr>
+        {{/each}}
+        </tbody>
+    </table>
+</div>
 </body>
 <html>
