--- a/Project/src/views/contractsList.hbs
+++ b/Project/src/views/contractsList.hbs
@@ -3,19 +3,46 @@
 <head>
     <title>My contracts</title>
     <meta charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<style>
+    table {
+        counter-reset: section;
+    }
+    .table{
+        margin-left: 10%;
+        width: 1000px;
+    }
+    .count:before {
+        counter-increment: section;
+        content: counter(section);
+    }
+</style>
 <body>
-<a href="/employee/my_page">Back to profile</a>
-<table>
-
-    {{#each contracts}}
+<a style="margin-left: 5%" href="/employee/my_page">Back to profile</a>
+<div class="row justify-content-center">
+    <table class="table">
+        <thead class="thead-light">
         <tr>
-            <td>{{this.name}}</td>
-            <td>{{this.surname}}</td>
-            <td>{{this.position}}</td>
-            <td>{{this.salary}}</td>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Surname</th>
+            <th scope="col">Position</th>
+            <th scope="col">Salary</th>
         </tr>
-    {{/each}}
-</table>
+        </thead>
+        <tbody>
+        {{#each contracts}}
+            <tr>
+                <td class="count"></td>
+                <td>{{this.name}}</td>
+                <td>{{this.surname}}</td>
+                <td>{{this.position}}</td>
+                <td>{{this.salary}}</td>
+            </tr>
+        {{/each}}
+        </tbody>
+    </table>
+</div>
 </body>
 <html>
