--- a/Project/src/views/login.hbs
+++ b/Project/src/views/login.hbs
@@ -3,16 +3,56 @@
 <head>
     <title>Login</title>
     <meta charset="utf-8" />
-    <style>.field{width:180px;}</style>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
+        body{
+            background-color: #525252;
+        }
+        .centered-form{
+            margin-top: 15%;
+        }
+
+        .centered-form .panel{
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+        }
+    </style>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <body>
-<a href="/register">Sign up</a>
-<form method="POST">
-    <label>Login</label><br>
-    <input name="login" class="field"/><br><br>
-    <label>Password</label><br>
-    <input name="password" class="field"/><br><br>
-    <input type="submit" value="Отправить" />
-</form>
+<div class="container">
+    <div class="row centered-form">
+        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+            <h1>Welcome to our Job Search Website!</h1>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please Sign In!<br>
+                        Don't have an account? <a style="color: #1700d4" href="/register">Sign up</a>
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <form role="form" method="post">
+
+                        <div class="form-group">
+                            <input type="text" name="login" class="form-control input-sm" placeholder="Login">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" name="password" class="form-control input-sm" placeholder="Password">
+                        </div>
+
+                        <input type="submit" value="Log in" class="btn btn-info btn-block">
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <html>
