--- a/Project/src/views/contractsList.hbs
+++ b/Project/src/views/contractsList.hbs
@@ -25,8 +25,8 @@
         <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Surname</th>
+            <th scope="col">Employers name</th>
+            <th scope="col">Employers surname</th>
             <th scope="col">Position</th>
             <th scope="col">Salary</th>
         </tr>
