--- a/Project/src/views/registration.hbs
+++ b/Project/src/views/registration.hbs
@@ -45,8 +45,8 @@
                         <div class="form-group">
                             <label>Select role:</label><br>
                             <select name="role">
-                                <option>Employee</option>
-                                <option>Employer</option>
+                                <option>employee</option>
+                                <option>employer</option>
                             </select>
                         </div>
                         <div class="form-group">
